<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00c5cd"
    tools:context="com.example.vamashikrishna.drawer.SigninActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_in"
        android:id="@+id/sign_in_finance"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/email_finance"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/sign_in_finance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edit_email_finance"
        android:layout_below="@+id/email_finance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/password_finance"
        android:layout_below="@+id/edit_email_finance"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_pass_finance"
        android:layout_below="@+id/password_finance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/sign_in_bf"
        android:layout_below="@+id/edit_pass_finance"
        android:layout_marginTop="55dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/show"
        android:id="@+id/show_finance"
        android:layout_marginTop="22dp"
        android:background="@color/colorPrimary"
        android:textAllCaps="false"
        android:layout_below="@+id/password_finance"
        android:layout_toRightOf="@+id/sign_in_finance"
        android:layout_toEndOf="@+id/sign_in_finance"
        android:layout_marginLeft="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/sign_up_finance"
        android:layout_alignTop="@+id/sign_in_bf"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
