<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.vamashikrishna.passiton.Forms">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/hello"
                    android:layout_marginBottom="15dp"
                    android:text="@string/hello"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/total"
                    android:layout_marginBottom="15dp"
                    android:text="@string/total"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/limit"
                    android:layout_marginBottom="15dp"
                    android:text="@string/Limit"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:text="@string/from"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginRight="16dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:text="@string/to"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_weight="1"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <DatePicker
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:layout_marginRight="10dp">
                    </DatePicker>
                    <!--<DatePicker-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="100dp"-->
                        <!--android:layout_weight="1"-->
                        <!--android:gravity="center|center_horizontal|center_vertical"-->
                        <!--android:layout_marginRight="16dp">-->
                    <!--</DatePicker>-->

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/camera" />

</android.support.design.widget.CoordinatorLayout>
